Creado mediante Colaboratory

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -168,6 +168,60 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hKU_IH5A3KlL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def matr (t,n):\n",
+        "    for n in range(0,n):\n",
+        "      r=t*n\n",
+        "      # print(\"{}\".format(t),\"x\",\"{}\".format(n),\"=\",r)\n",
+        "      print(\"{}x{}={}\".format(n,t,r))\n",
+        "      "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rPnM8v_h4vO4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "c6958fa7-fb11-461b-c765-0330d92df8ac"
+      },
+      "source": [
+        "matr(5,12)"
+      ],
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0x5=0\n",
+            "1x5=5\n",
+            "2x5=10\n",
+            "3x5=15\n",
+            "4x5=20\n",
+            "5x5=25\n",
+            "6x5=30\n",
+            "7x5=35\n",
+            "8x5=40\n",
+            "9x5=45\n",
+            "10x5=50\n",
+            "11x5=55\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
